build/js/components/requirejs/tests/error/defineError.js
define(["a"],function(e){return{name:"hasDefineError",broken:e.doesNotExist.blowsUp}});